--- a/healthcare-dashboard.html
+++ b/healthcare-dashboard.html
@@ -23,6 +23,7 @@
     html { scroll-behavior: smooth; }
     body { font-family: var(--font-body); color: var(--color-text); line-height: 1.7; background: var(--color-bg-warm); }
     .page-wrapper { position: relative; background: linear-gradient(180deg, #FDFCFA 0%, #FAF8F5 50%, #FDFCFA 100%); min-height: 100vh; }
+.page-wrapper::before { content: ''; position: absolute; inset: 0; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='canvas'%3E%3CfeTurbulence type='turbulence' baseFrequency='0.04' numOctaves='5' result='noise'/%3E%3CfeDiffuseLighting in='noise' lighting-color='%23FDFCFA' surfaceScale='1'%3E%3CfeDistantLight azimuth='45' elevation='60'/%3E%3C/feDiffuseLighting%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23canvas)' opacity='0.3'/%3E%3C/svg%3E"); opacity: 0.5; pointer-events: none; z-index: 0; }
     .nav, .hero, .content, .footer { position: relative; z-index: 1; }
     .nav { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; }
     .nav::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 3px; background: var(--project-gradient); z-index: 1; }
@@ -33,33 +34,37 @@
     .nav-back:hover { color: #1E40AF; }
     .nav-back svg { width: 18px; height: 18px; }
     .nav-logo { font-family: var(--font-display); font-size: 1.1rem; color: var(--color-text); text-decoration: none; }
-    .hero { padding: 8rem 2rem 4rem; text-align: center; }
-    .hero-container { max-width: var(--max-width); margin: 0 auto; }
+    .hero { padding: 8rem 2rem 2rem; }
+.hero-container { max-width: var(--max-width); margin: 0 auto; }
+.hero-card { background: linear-gradient(135deg, white 0%, white 50%, rgba(217, 119, 6, 0.12) 100%); border: 1px solid rgba(217, 119, 6, 0.1); border-radius: 16px; padding: 3rem 2rem; text-align: center; position: relative; overflow: hidden; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04); }
+.hero-card::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 4px; background: var(--project-gradient); }
     .hero-meta { display: flex; align-items: center; justify-content: center; gap: 1rem; margin-bottom: 1.5rem; flex-wrap: wrap; }
     .hero-role { font-size: 0.7rem; font-weight: 600; letter-spacing: 0.1em; text-transform: uppercase; color: white; background: var(--project-gradient); padding: 0.5rem 1rem; border-radius: 2rem; }
     .hero-org { font-size: 0.85rem; color: var(--color-text-secondary); }
     .hero-title { font-family: var(--font-display); font-size: clamp(2rem, 4.5vw, 3rem); font-weight: 400; line-height: 1.15; margin-bottom: 1.5rem; }
     .hero-summary { font-size: 1.15rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto 2rem; }
     .results-banner { display: flex; justify-content: center; gap: 1.5rem; flex-wrap: wrap; }
-    .result-card { background: rgba(255,255,255,0.7); backdrop-filter: blur(10px); border-radius: 12px; padding: 1.25rem 1.5rem; border: 1px solid rgba(255,255,255,0.8); box-shadow: 0 4px 20px rgba(0,0,0,0.03); text-align: center; min-width: 140px; position: relative; overflow: hidden; }
-    .result-card::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 3px; background: var(--project-gradient); }
-    .result-number { font-family: var(--font-display); font-size: 1.5rem; color: #1E40AF; margin-bottom: 0.25rem; }
-    .result-label { font-size: 0.75rem; color: var(--color-text-secondary); text-transform: uppercase; letter-spacing: 0.05em; }
+    .result-card { background: var(--project-gradient); border-radius: 12px; padding: 1rem 1.25rem; text-align: center; min-width: 120px; color: white; }
+.result-number { font-family: var(--font-display); font-size: 1.5rem; color: white; }
+.result-label { font-size: 0.75rem; color: rgba(255,255,255,0.9); text-transform: uppercase; letter-spacing: 0.05em; }
     .content { padding: 3rem 2rem 4rem; }
     .content-container { max-width: var(--max-width); margin: 0 auto; }
     .content-section { margin-bottom: 3rem; }
     .content-title { font-family: var(--font-display); font-size: 1.5rem; margin-bottom: 1rem; color: var(--color-text); }
     .content-text { color: var(--color-text-secondary); margin-bottom: 1rem; }
-    .glass-card { background: rgba(255,255,255,0.6); backdrop-filter: blur(10px); border-radius: 16px; padding: 2rem; border: 1px solid rgba(255,255,255,0.8); box-shadow: 0 4px 20px rgba(0,0,0,0.03); }
+   .glass-card { background: linear-gradient(135deg, white 0%, white 50%, rgba(217, 119, 6, 0.12) 100%); border: 1px solid rgba(217, 119, 6, 0.1); border-radius: 16px; padding: 2rem; box-shadow: 0 4px 20px rgba(0,0,0,0.04); position: relative; overflow: hidden; }
+.glass-card::before { content: ''; position: absolute; top: 0; left: 0; width: 4px; height: 100%; background: var(--project-gradient); }
+box-shadow: 0 4px 20px rgba(0,0,0,0.03); }
     .content-list { list-style: none; margin: 1rem 0; }
     .content-list li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: var(--color-text-secondary); }
     .content-list li::before { content: '→'; position: absolute; left: 0; color: #1E40AF; font-weight: bold; }
-    .tags { display: flex; flex-wrap: wrap; gap: 0.5rem; margin-top: 1.5rem; }
-    .tag { background: linear-gradient(135deg, rgba(30,64,175,0.1) 0%, rgba(13,148,136,0.1) 100%); color: #1E40AF; padding: 0.35rem 0.75rem; border-radius: 2rem; font-size: 0.8rem; font-weight: 500; }
+   .tags { display: flex; flex-wrap: wrap; gap: 0.5rem; margin-top: 1.5rem; justify-content: center; max-width: 600px; margin-left: auto; margin-right: auto; }
+.tag { font-size: 0.7rem; font-weight: 600; padding: 0.4rem 0.8rem; border-radius: 2rem; background: var(--project-gradient); color: white; } 2rem; font-size: 0.8rem; font-weight: 500; }
     .feature-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-top: 1.5rem; }
-    .feature-card { background: rgba(255,255,255,0.6); backdrop-filter: blur(10px); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.8); }
-    .feature-card h4 { font-family: var(--font-display); font-size: 1.1rem; margin-bottom: 0.5rem; color: var(--color-text); }
-    .feature-card p { font-size: 0.9rem; color: var(--color-text-secondary); }
+.feature-card { background: linear-gradient(135deg, white 0%, white 50%, rgba(217, 119, 6, 0.1) 100%); border: 1px solid rgba(217, 119, 6, 0.1); border-radius: 12px; padding: 1.5rem; position: relative; overflow: hidden; }
+.feature-card::before { content: ''; position: absolute; top: 0; left: 0; width: 4px; height: 100%; background: var(--project-gradient); }
+.feature-card h4 { font-family: var(--font-display); font-size: 1.1rem; margin-bottom: 0.5rem; color: var(--color-text); }
+.feature-card p { font-size: 0.9rem; color: var(--color-text-secondary); }
     .comparison-section { margin: 2rem 0; }
     .comparison-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; margin-top: 1rem; }
     .comparison-card { border-radius: 12px; padding: 1.5rem; }
@@ -70,20 +75,22 @@
     .comparison-card.after h4 { color: #059669; }
     .comparison-card ul { list-style: none; font-size: 0.9rem; color: var(--color-text-secondary); }
     .comparison-card li { padding: 0.3rem 0; }
-    .navigate-section { background: linear-gradient(135deg, rgba(30,64,175,0.05) 0%, rgba(13,148,136,0.05) 100%); border-radius: 16px; padding: 2rem; margin: 2rem 0; border: 1px solid rgba(30,64,175,0.1); }
-    .navigate-section h3 { font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem; color: var(--color-text); }
-    .navigate-steps { display: grid; gap: 1rem; }
-    .navigate-step { display: flex; gap: 1rem; align-items: flex-start; }
-    .step-number { width: 28px; height: 28px; background: var(--project-gradient); color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.85rem; font-weight: 600; flex-shrink: 0; }
-    .step-content h4 { font-size: 0.95rem; margin-bottom: 0.25rem; }
-    .step-content p { font-size: 0.85rem; color: var(--color-text-secondary); }
-    .demo-card { display: flex; align-items: center; gap: 1.5rem; background: var(--project-gradient); border-radius: 16px; padding: 2rem; cursor: pointer; transition: all 0.3s ease; text-decoration: none; }
-    .demo-card:hover { transform: translateY(-3px); box-shadow: 0 12px 40px rgba(30,64,175,0.3); }
-    .demo-icon { width: 64px; height: 64px; background: rgba(255,255,255,0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; }
-    .demo-icon svg { color: white; }
-    .demo-text { color: white; }
-    .demo-text h3 { font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 0.25rem; }
-    .demo-text p { opacity: 0.9; font-size: 0.9rem; }
+   .navigate-section { background: linear-gradient(135deg, white 0%, white 50%, rgba(217, 119, 6, 0.12) 100%); border: 1px solid rgba(217, 119, 6, 0.1); border-radius: 16px; padding: 2rem; margin: 2rem 0; position: relative; overflow: hidden; }
+.navigate-section::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 4px; background: var(--project-gradient); }
+.navigate-section h3 { font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem; color: var(--color-text); }
+.navigate-steps { display: grid; gap: 1rem; }
+.navigate-step { display: flex; gap: 1rem; align-items: flex-start; }
+.step-number { width: 28px; height: 28px; background: var(--project-gradient); color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.85rem; font-weight: 600; flex-shrink: 0; }
+.step-content h4 { font-size: 0.95rem; margin-bottom: 0.25rem; }
+.step-content p { font-size: 0.85rem; color: var(--color-text-secondary); }
+    .demo-card { display: flex; align-items: center; gap: 1.5rem; background: linear-gradient(135deg, white 0%, white 50%, rgba(217, 119, 6, 0.15) 100%); border: 1px solid rgba(217, 119, 6, 0.1); border-radius: 16px; padding: 2rem; cursor: pointer; transition: all 0.3s ease; text-decoration: none; position: relative; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.04); }
+.demo-card::before { content: ''; position: absolute; top: 0; left: 0; width: 6px; height: 100%; background: var(--project-gradient); }
+.demo-card:hover { transform: translateY(-3px); box-shadow: 0 12px 40px rgba(217,119,6,0.2); }
+.demo-icon { width: 64px; height: 64px; background: var(--project-gradient); border-radius: 12px; display: flex; align-items: center; justify-content: center; }
+.demo-icon svg { color: white; }
+.demo-text { color: var(--color-text); }
+.demo-text h3 { font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 0.25rem; }
+.demo-text p { color: var(--color-text-secondary); font-size: 0.9rem; }
     .cta-section { text-align: center; padding: 2rem 0; }
     .btn-cta { display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.75rem 1.5rem; background: var(--project-gradient); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 0.95rem; transition: all 0.2s ease; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
     .btn-cta:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0,0,0,0.15); }
@@ -424,18 +431,25 @@
 /* Case Study Dropdown */
 .casestudy-box {
   margin-top: 2rem;
-  border: 3px dashed #1E40AF;
-  border-radius: 12px;
-  padding: 1.25rem;
-  background: rgba(30, 64, 175, 0.08);
+  margin-bottom: 0;
+  border: 2px dashed #d97706;
+  border-radius: 10px;
+  padding: 0.75rem 1.25rem;
+  background: rgba(217, 119, 6, 0.06);
   text-align: center;
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  position: relative;
 }
 .casestudy-label {
-  font-size: 0.7rem;
+  font-size: 0.65rem;
   font-weight: 700;
   letter-spacing: 0.05em;
-  color: #1e3a8a;
-  margin-bottom: 0.75rem;
+  color: #b45309;
+  margin-bottom: 0;
   display: block;
 }
 .casestudy-dropdown {
@@ -456,7 +470,7 @@
   font-family: var(--font-body);
   font-size: 0.85rem;
   font-weight: 600;
-  color: #1e3a8a;
+  color: #b45309;
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -493,7 +507,7 @@
   transition: background 0.15s;
 }
 .casestudy-dropdown-item:hover { background: #f5f5f5; }
-.casestudy-dropdown-item svg { width: 16px; height: 16px; color: #1e3a8a; }
+.casestudy-dropdown-item svg { width: 16px; height: 16px; color: #b45309; }
 </style>
 </head>
 <body>
