--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -559,7 +559,9 @@
 
 .progress-bar {
   display: flex;
+  justify-content: center;
   align-items: flex-start;
+  padding-top: 0.5rem;
   position: relative;
   min-width: 600px;
 }
@@ -889,13 +891,13 @@
 }
 
 .card-image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
   transition: transform 0.3s;
 }
-
 .card-image-container:hover img {
   transform: scale(1.02);
 }
@@ -1516,7 +1518,7 @@
     <div class="card-panel">
       <div class="card-image-container" onclick="openTimelineModal()">
         <button class="card-nav prev" onclick="event.stopPropagation(); prevStep()">←</button>
-        <img id="cardImage" src="images/Mesa__AZ_Spanish_Ad.jpg" alt="Mesa image">
+        <img id="cardImage" src="images/Mesa, AZ Spanish Ad.jpg" alt="Mesa image">
         <button class="card-nav next" onclick="event.stopPropagation(); nextStep()">→</button>
       </div>
       <div class="card-content">
@@ -1968,7 +1970,7 @@ const timelineData = [
     location: "Mesa, AZ",
     title: "First Practice — Fresh Out of School",
     description: "Our first ad after Lance graduated from Parker College in Dallas. We rented space in Mesa for 9 months, reaching out to the Latino community in the East Valley.",
-    image: "images/Mesa__AZ_Spanish_Ad.jpg",
+   image: "images/Mesa, AZ Spanish Ad.jpg",
     pin: "pin-mesa"
   },
   {
