--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -1324,7 +1324,7 @@
           
          <div class="glass-card" style="margin-bottom: 1.5rem;">
   <h3 style="font-family: var(--font-display); font-size: 1.25rem; margin-bottom: 1rem;">Landing the Trucking Contract</h3>
-  <p class="content-text">I cold-called a local trucking company and pitched something they'd never considered: on-site chiropractic care for their drivers.</p>
+  <p class="content-text">I cold-called a local <a href="https://www.facebook.com/p/Robinson-Transport-Inc-100083505011062/" target="_blank" style="color: #7c3aed; text-decoration: underline;">trucking company</a> and pitched something they'd never considered: on-site chiropractic care for their drivers.</p>
   <p class="content-text">Truckers sit for 10+ hours a day. Back problems aren't a "maybe"—they're a "when." I positioned us as preventive care that would reduce their workers' comp claims and keep drivers on the road.</p>
   <p class="content-text">They said yes. We became their exclusive provider.</p>
 </div>
