--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -642,11 +642,11 @@
 
 .split-container {
   display: grid;
-  grid-template-columns: 1fr 1.3fr;
+  grid-template-columns: 320px 1fr;
   gap: 0;
-  max-width: 1100px;
+  max-width: 1000px;
   margin: 0 auto;
-  min-height: 460px;
+  min-height: 500px;
   background: white;
   border-radius: 20px;
   overflow: hidden;
@@ -667,6 +667,8 @@
   display: flex;
   flex-direction: column;
   border-right: 3px solid #d4c4a0;
+  width: 320px;
+  flex-shrink: 0;
 }
 
 .map-title {
@@ -680,12 +682,12 @@
 }
 
 .map-area {
-  flex: 1;
   position: relative;
   background: linear-gradient(180deg, #e8d4a8 0%, #dcc89c 30%, #d4bc8a 60%, #c9ad78 100%);
   border-radius: 8px;
   overflow: hidden;
-  min-height: 420px;
+  width: 100%;
+  aspect-ratio: 300 / 420;
   border: 4px double #8b7355;
   box-shadow: 
     0 0 0 2px #f5e6c8,
@@ -709,9 +711,13 @@
 
 .map-svg {
   position: absolute;
-  inset: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
+  max-width: 300px;
+  max-height: 420px;
 }
 
 .state-shape {
@@ -1074,7 +1080,12 @@
     margin: 0 1rem;
   }
   .map-panel {
-    min-height: 250px;
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto;
+  }
+  .map-area {
+    aspect-ratio: 300 / 420;
   }
   .timeline-modal-nav.prev { left: 10px; }
   .timeline-modal-nav.next { right: 10px; }
@@ -1393,7 +1404,7 @@
 <div class="map-panel">
       <div class="map-title">📍 The Journey</div>
       <div class="map-area">
-        <svg class="map-svg" viewBox="0 0 300 420">
+        <svg class="map-svg" viewBox="0 0 300 420" preserveAspectRatio="xMidYMid meet">
           
           <!-- UTAH - Top, large -->
           <rect class="state-shape" x="45" y="20" width="190" height="160" rx="5"/>
