--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -657,7 +657,9 @@
   gap: 0;
   max-width: 1000px;
   margin: 0 auto;
-  min-height: 500px;
+  height: 520px;
+  min-height: 520px;
+  max-height: 520px;
   background: white;
   border-radius: 20px;
   overflow: hidden;
@@ -679,7 +681,7 @@
   flex-direction: column;
   border-right: 3px solid #d4c4a0;
   width: 320px;
-  flex-shrink: 0;
+  height: 100%;
 }
 
 .map-title {
@@ -834,6 +836,9 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(135deg, white 0%, white 50%, rgba(124, 58, 237, 0.05) 100%);
+  height: 520px;
+  max-height: 520px;
+  overflow: hidden;
 }
 
 .card-image-container {
@@ -842,11 +847,13 @@
   overflow: hidden;
   background: #f3f4f6;
   cursor: pointer;
-  flex: 1;
-  min-height: 240px;
+  height: 320px;
+  min-height: 320px;
+  max-height: 320px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .card-image-container::after {
@@ -1089,14 +1096,28 @@
   .split-container {
     grid-template-columns: 1fr;
     margin: 0 1rem;
+    height: auto;
+    max-height: none;
+    min-height: auto;
   }
   .map-panel {
     width: 100%;
     max-width: 320px;
+    height: 400px;
     margin: 0 auto;
   }
   .map-area {
     aspect-ratio: 300 / 420;
+    max-height: 350px;
+  }
+  .card-panel {
+    height: auto;
+    max-height: none;
+  }
+  .card-image-container {
+    height: 280px;
+    min-height: 280px;
+    max-height: 280px;
   }
   .timeline-modal-nav.prev { left: 10px; }
   .timeline-modal-nav.next { right: 10px; }
@@ -1123,7 +1144,9 @@
     padding: 1rem;
   }
   .card-image-container {
-    min-height: 200px;
+    height: 220px;
+    min-height: 220px;
+    max-height: 220px;
   }
   .card-nav {
     width: 32px;
