--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       color: var(--color-text);
       line-height: 1.6;
       background: transparent;
+      overflow-x: hidden;
     }
 
     /* Page Wrapper with Seamless Background */
@@ -1094,14 +1095,14 @@
     /* ==================== TESTIMONIALS - COLORFUL ==================== */
    .testimonials-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(min(320px, 100%), 1fr));
       gap: 1.5rem;
       justify-content: center;
     }
 
     .testimonials-hidden.visible {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(min(320px, 100%), 1fr));
       gap: 1.5rem;
       justify-content: center;
     }
@@ -1226,7 +1227,7 @@
     /* ==================== SKILLS - COLORFUL ==================== */
     .skills-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(min(280px, 100%), 1fr));
       gap: 1.5rem;
     }
 
@@ -1303,7 +1304,7 @@
     /* ==================== EDUCATION - COLORFUL ==================== */
     .education-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(min(260px, 100%), 1fr));
       gap: 1.5rem;
     }
 
@@ -2926,22 +2927,22 @@
           <div class="method-step-title">Immerse</div>
           <div class="method-step-desc">Learn the domain deeply</div>
         </div>
-        <span class="method-arrow">→</span>
+        <span class="method-arrow">â†’</span>
         <div class="method-step">
           <div class="method-step-title">Identify</div>
           <div class="method-step-desc">Find gaps & opportunities</div>
         </div>
-        <span class="method-arrow">→</span>
+        <span class="method-arrow">â†’</span>
         <div class="method-step">
           <div class="method-step-title">Ideate</div>
           <div class="method-step-desc">Creative solutioning</div>
         </div>
-        <span class="method-arrow">→</span>
+        <span class="method-arrow">â†’</span>
         <div class="method-step">
           <div class="method-step-title">Collaborate</div>
           <div class="method-step-desc">Align & refine together</div>
         </div>
-        <span class="method-arrow">→</span>
+        <span class="method-arrow">â†’</span>
         <div class="method-step">
           <div class="method-step-title">Build</div>
           <div class="method-step-desc">Prototype, test, deliver</div>
@@ -3072,7 +3073,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">UX Designer / Developer</span>
-              <span class="case-study-org">· Healthcare Consulting</span>
+              <span class="case-study-org">Â· Healthcare Consulting</span>
               <span class="case-study-date">2025</span>
             </div>
             <h3 class="case-study-title">Healthcare Operations Dashboard</h3>
@@ -3091,7 +3092,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">Training Manager</span>
-              <span class="case-study-org">· Xactware</span>
+              <span class="case-study-org">Â· Xactware</span>
               <span class="case-study-date">2014–2015</span>
             </div>
             <h3 class="case-study-title">Workforce Development Program</h3>
@@ -3110,7 +3111,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">IT Consultant / Co-founder</span>
-              <span class="case-study-org">· Resolute Services</span>
+              <span class="case-study-org">Â· Resolute Services</span>
               <span class="case-study-date">2008–2012</span>
             </div>
             <h3 class="case-study-title">Healthcare Process Automation</h3>
@@ -3129,7 +3130,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">Instructional Designer / Co-founder</span>
-              <span class="case-study-org">· Arizona Esthetics Institute</span>
+              <span class="case-study-org">Â· Arizona Esthetics Institute</span>
               <span class="case-study-date">2003–2004</span>
             </div>
             <h3 class="case-study-title">Trade School Program</h3>
@@ -3148,7 +3149,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">Computer Lab Manager</span>
-              <span class="case-study-org">· Palmview K-8</span>
+              <span class="case-study-org">Â· Palmview K-8</span>
               <span class="case-study-date">2021–2022</span>
             </div>
             <h3 class="case-study-title">Technology Documentation</h3>
@@ -3167,7 +3168,7 @@
             </div>
             <div class="case-study-meta">
               <span class="case-study-role">Co-founder / Marketing</span>
-              <span class="case-study-org">· Gardner Chiropractic</span>
+              <span class="case-study-org">Â· Gardner Chiropractic</span>
               <span class="case-study-date">1997–2004</span>
             </div>
             <h3 class="case-study-title">Marketing, Sales & Community Outreach</h3>
@@ -3196,47 +3197,47 @@
           <div class="testimonial-card">
             <p class="testimonial-quote">"Her empathy and human connection are effortless as she quickly builds rapport and trust through sincere and honest communication. When she feels safe and supported, you will get all of her—all of her talents, productivity, loyalty, compassion, tenacity, and drive."</p>
             <div class="testimonial-author">Mike Saavedra</div>
-            <div class="testimonial-role">Senior Java Engineer · 2023</div>
+            <div class="testimonial-role">Senior Java Engineer Â· 2023</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"In just one year, Christie advanced from Quality Assurance Analyst to Training Manager, where she designed and launched the MTECH Web Development program—a proprietary curriculum that secured a $200,000 UCAP grant."</p>
             <div class="testimonial-author">Timothy Harrison</div>
-            <div class="testimonial-role">Technical Project Manager, MNTN · 2025</div>
+            <div class="testimonial-role">Technical Project Manager, MNTN Â· 2025</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie is one of the most adaptable, resourceful, and collaborative colleagues I have ever worked with. What sets her apart is her combination of strong technical acumen with equally strong interpersonal skills."</p>
             <div class="testimonial-author">Paris Baird</div>
-            <div class="testimonial-role">Chief Client Relations Officer, SkyVantage · 2025</div>
+            <div class="testimonial-role">Chief Client Relations Officer, SkyVantage Â· 2025</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"I still marvel at Christie's talents for learning, vision for organization and never-endingly finding the most creative, well supported solutions quickly, when others are often left reeling in doubt. She is a woman of conviction, vision, dedication and strength."</p>
             <div class="testimonial-author">Kuulei Hanamaikai</div>
-            <div class="testimonial-role">Director of Search, thomasarts · 2020</div>
+            <div class="testimonial-role">Director of Search, thomasarts Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie was quick to assess a process of customer engagement and create a map for our Marketing group. She was excellent about working to add value with minimal direction."</p>
             <div class="testimonial-author">Jeremy Meredith</div>
-            <div class="testimonial-role">Senior VP of Information Technology, Xyngular · 2020</div>
+            <div class="testimonial-role">Senior VP of Information Technology, Xyngular Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie works hard and strives to succeed with all projects she is handed. In the time we worked together we challenged each other to make the best decisions for our teams and our products."</p>
             <div class="testimonial-author">Dave Armstrong</div>
-            <div class="testimonial-role">Product Manager, Alianza · 2020</div>
+            <div class="testimonial-role">Product Manager, Alianza Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie is the type of person that if you give her an impossible task, she will have it done quickly and efficiently, then ask for another."</p>
             <div class="testimonial-author">Brett Barker</div>
-            <div class="testimonial-role">Training Manager, Verisk · 2015</div>
+            <div class="testimonial-role">Training Manager, Verisk Â· 2015</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"There aren't many people I have encountered who have had as much impact in as short of a time as Christie had here. She is a very driven, passionate person."</p>
             <div class="testimonial-author">Kevin Carpenter</div>
-            <div class="testimonial-role">QA Manager, Xactware · 2015</div>
+            <div class="testimonial-role">QA Manager, Xactware Â· 2015</div>
           </div>
         </div>
 
         <button class="testimonials-expand-btn" id="expandBtn1" onclick="expandTestimonials(1)">
-          See more recommendations →
+          See more recommendations â†’
         </button>
 
         <!-- Tier 2: Next 8 testimonials -->
@@ -3244,47 +3245,47 @@
           <div class="testimonial-card">
             <p class="testimonial-quote">"Her background in managing companies and in software development formed a synergy that made her extremely effective. As a leader, she inspires and uplifts those around her to greatness."</p>
             <div class="testimonial-author">Tim Harrison</div>
-            <div class="testimonial-role">Project Manager, Verisk · 2015</div>
+            <div class="testimonial-role">Project Manager, Verisk Â· 2015</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"She has an unsurprised drive to deliver well-thought-out results, and any organization would benefit from what she brings to the table."</p>
             <div class="testimonial-author">Kevin Overstreet</div>
-            <div class="testimonial-role">Product Manager, Beatport · 2020</div>
+            <div class="testimonial-role">Product Manager, Beatport Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"I respected the way she met challenges head on. If there were problems that other team members had disregarded or ignored she would bring them back to the table for another review."</p>
             <div class="testimonial-author">Matthew Kern</div>
-            <div class="testimonial-role">Technical Product Manager, Weave HQ · 2020</div>
+            <div class="testimonial-role">Technical Product Manager, Weave HQ Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie is tenacious and driven to make improvements. She also has a nice background in tech that developers and IT teams will notice and trust."</p>
             <div class="testimonial-author">Steve Gordon</div>
-            <div class="testimonial-role">Sr Director App Engineering, Xyngular · 2020</div>
+            <div class="testimonial-role">Sr Director App Engineering, Xyngular Â· 2020</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"She has a talent for evaluating situations and determining the best course of action. She is willing to do what is right for the company regardless of the ramifications."</p>
             <div class="testimonial-author">Derek Caswell</div>
-            <div class="testimonial-role">Software Developer, Younique · 2017</div>
+            <div class="testimonial-role">Software Developer, Younique Â· 2017</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"She had a big impact on the growth of my business. She would arrive to work with fresh ideas on how to improve the campaigns. The majority of the time her ideas worked."</p>
             <div class="testimonial-author">Jerry West</div>
-            <div class="testimonial-role">Keynote Speaker, Affiliate Marketer · 2017</div>
+            <div class="testimonial-role">Keynote Speaker, Affiliate Marketer Â· 2017</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christine is an extremely bright and ambitious person with a flair for creative solutions to complex problems."</p>
             <div class="testimonial-author">Leonard Jenkins</div>
-            <div class="testimonial-role">Employment Counselor, Utah DWS · 2015</div>
+            <div class="testimonial-role">Employment Counselor, Utah DWS Â· 2015</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"She is as good as anyone at mapping out a vision or strategy and the first to be at the front lines doing whatever work is needed."</p>
             <div class="testimonial-author">David Nelson</div>
-            <div class="testimonial-role">Marketing Manager, Xactware · 2015</div>
+            <div class="testimonial-role">Marketing Manager, Xactware Â· 2015</div>
           </div>
         </div>
 
         <button class="testimonials-expand-btn hidden" id="expandBtn2" onclick="expandTestimonials(2)">
-          See more recommendations →
+          See more recommendations â†’
         </button>
 
         <!-- Tier 3: Next 8 testimonials -->
@@ -3292,42 +3293,42 @@
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christine has wonderful vision and is truly concerned about how she affects people around her."</p>
             <div class="testimonial-author">Lisa Birch</div>
-            <div class="testimonial-role">Director, MATC · 2015</div>
+            <div class="testimonial-role">Director, MATC Â· 2015</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christine ensures that she is as well-equipped for success as possible, but also that those around her are similarly able to fulfill their maximum potential."</p>
             <div class="testimonial-author">Christopher Stevenson</div>
-            <div class="testimonial-role">Lead Developer, Xactware · 2015</div>
+            <div class="testimonial-role">Lead Developer, Xactware Â· 2015</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christine has attitude, charm, and drive coupled with her experience in the field. She is definitely a formidable force."</p>
             <div class="testimonial-author">Mark-Anthony Torrocha</div>
-            <div class="testimonial-role">Director of Operations, CultureForce · 2014</div>
+            <div class="testimonial-role">Director of Operations, CultureForce Â· 2014</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christine displayed outstanding aptitude, insight, and managerial talent. She is well-organized, has first-rate administrative skills, and strives to do everything with excellence."</p>
             <div class="testimonial-author">Dr. Don G. Schley, PMP</div>
-            <div class="testimonial-role">Director PM Programs, Colorado Technical University · 2008</div>
+            <div class="testimonial-role">Director PM Programs, Colorado Technical University Â· 2008</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"The combination of a strong self-starter and an excellent team player combined in one individual is, from my perspective, a rarity."</p>
             <div class="testimonial-author">Bob Walsh</div>
-            <div class="testimonial-role">Dept. Chair, UVU · 2008</div>
+            <div class="testimonial-role">Dept. Chair, UVU Â· 2008</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"She is very personable and honest... knowledgeable about business and what makes them succeed."</p>
             <div class="testimonial-author">J.D. Davidson</div>
-            <div class="testimonial-role">Professor, UVU · 2008</div>
+            <div class="testimonial-role">Professor, UVU Â· 2008</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Not only did Christie improve my service department, but she went a step further and realized that the company as a whole was in need of a program that would train and provide technicians."</p>
             <div class="testimonial-author">Russell Hunt</div>
-            <div class="testimonial-role">Service Manager, Camping World · 2008</div>
+            <div class="testimonial-role">Service Manager, Camping World Â· 2008</div>
           </div>
           <div class="testimonial-card">
             <p class="testimonial-quote">"Christie took charge in her role as Office Manager and helped tremendously in organizing and running her department. She is smart, organized, efficient, extremely competent, and highly energetic."</p>
             <div class="testimonial-author">Steve Winters</div>
-            <div class="testimonial-role">Sr. Account Executive, Total Computing Solutions · 2007</div>
+            <div class="testimonial-role">Sr. Account Executive, Total Computing Solutions Â· 2007</div>
           </div>
         </div>
       </div>
@@ -3681,7 +3682,7 @@
       }
     });
 
-    // Stat card → Case study highlighting
+    // Stat card â†’ Case study highlighting
     const statItems = document.querySelectorAll('.stat-item[data-highlights]');
     const caseStudyCards = document.querySelectorAll('.case-study-card[data-project]');
     
