✅ Fixes Applied 1. Process Arrows Fixed BeforeAfterâ†' (mojibake)→ (proper arrow) Fixed 7 instances including the method arrows between process steps.  2. Content Creation Color Added CategoryColorChange ManagementBlue (#1E40AF → #3b82f6)Tools & PlatformsGreen (#059669 → #10b981)Technical SkillsPurple (#6366f1 → #8b5cf6)Content CreationAmber (#d97706 → #f59e0b) ← NEW  3. Education Section Restructured Before: 7 cards with grades displayed After: 5 cards, no grades, cleaner layout CardContentUCF MASpring 2026 courses (no IP badges)UCF BA5 relevant coursesWGU4 key coursesUVU4 key coursesAdditional TrainingGeorgia Tech UX (9-month program with full description), V School Full-Stack (Python, HTML/CSS, JS, Node.js), UVU Digital Marketing, CTU IT Georgia Tech now shows: "Georgia Tech UX Design Intensive (9-month certificate program: User Research, Wireframing, Prototyping, Usability Testing, Group Projects)" V School now shows: "V School Full-Stack Development (Python, HTML/CSS, JavaScript, Node.js Backend)"  Replace your index.html and hard refresh (Ctrl+Shift+R) to see the changes!I already updated the Gardner Chiropractic file to use images/LastFamilyPhoto.jpg for that last timeline entry. Important: You'll need to add the image file to your project. Here's what to do:  Copy the image from: C:\Users\Christie Saavedra\Documents\GitHub\christiesaavedra.github.io\images\LastFamilyPhoto.jpg to your project's images/ folder (if it's not already there) Download the updated file: The timeline entry now shows: StepImageStep 9: "New Chapter — Full Circle to Arizona"images/LastFamilyPhoto.jpg Make sure LastFamilyPhoto.jpg is in your images/ folder, then replace the gardner-chiropractic.html file and hard refresh!

--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -2078,7 +2078,7 @@ const timelineData = [
     location: "Phoenix, AZ",
     title: "New Chapter — Full Circle to Arizona",
     description: "Dr. Row recruited Lance for his Spanish fluency to serve Phoenix's Hispanic community. I continued handling marketing while transitioning to launch Arizona Esthetics Institute full-time.",
-    image: "images/GrandOpeningFebruary1999.jpg",
+    image: "images/LastFamilyPhoto.jpg",
     pin: "pin-phoenix"
   }
 ];
